[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "fio-cdm"
version = "1.0.0"
authors = [
    {name = "Lu Xu", email = "oliver_lew@outlook.com"},
    {name = "Pythoniasm", email = "26092465+Pythoniasm@users.noreply.github.com"},
]
description = "A python script to generate CrystalDiskMark-style test result with fio. Should work across multi platforms."
readme = "README.md"
requires-python = ">=3.9.13"
keywords = ["CrystalDiskMark", "disk utilities", "hdd", "ssd"]
license = {text = "MIT"}
dependencies = []


[tool.setuptools.package-data]
"fio_cdm.bin" = ["fio.exe"]

[project.scripts]
fio-cdm = "fio_cdm.__main__:entrypoint"
